[package]
name = "taskflow-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = { version = "0.12.1", features = ["nightly"] }
petgraph = { version = "0.6.3", features = ["all", "serde"] }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
